--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Agrega enlaces a las bibliotecas de Tailwind CSS aquí -->
-    <title>Juego de Rol RPG</title>
+    <title>Juego de Rol RPG. Batalla del siglo</title>
 </head>
 <body>
     <div class="container mx-auto p-4">
