--- a/src/portada.html
+++ b/src/portada.html
@@ -1,23 +1,28 @@
+ <!-- STEPHANIE ORANTES-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css">
-  <title>Juego INU. Stephanie Orantes</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 </head>
-<body>
+<body class="bg-gray-400 h-screen flex justify-center items-center relative">
+    <!-- Imagen en la esquina superior izquierda -->
+    <img src="Por.png" alt="Castillo de portada Orantes Stephanie" class="absolute top-0 left-0 w-1/4 z-0" style="opacity: 0.5;">
 
-<div class="flex flex-col items-center justify-center h-screen">
-  <h1 class="text-4xl font-bold mb-4">Orantes Castle: Enchanted Battle.</h1>
+    <!-- Imagen en la esquina superior derecha -->
+    <img src="Por.png" alt="Castillo de portada Orantes Stephanie" class="absolute top-0 right-0 w-1/4 z-0" style="opacity: 0.5;">
 
-  <div class="mb-8" id="image-container">
-    <!-- Las imágenes interactivas se agregarán aquí desde JavaScript -->
-  </div>
+    <!-- Imagen en la esquina inferior izquierda -->
+    <img src="Por.png" alt="Castillo de portada Orantes Stephanie" class="absolute bottom-0 left-0 w-1/4 z-0" style="opacity: 0.5;">
 
-  <button class="bg-blue-500 text-white px-4 py-2 rounded" id="start-button">Iniciar Juego</button>
-</div>
+    <!-- Imagen en la esquina inferior derecha -->
+    <img src="Por.png" alt="Castillo de portada Orantes Stephanie" class="absolute bottom-0 right-0 w-1/4 z-0" style="opacity: 0.5;">
 
-<script src="Portada.js"></script>
+    <div class="text-center text-white z-10">
+        <h1 class="text-4xl font-bold mb-6 text-center">Orantes Castle: Enchanted Battle</h1>
+        <button class="bg-yellow-500 text-white text-lg py-2 px-4 rounded cursor-pointer" id="start-button">Comenzar Juego</button>
+    </div>
+
+    <script src="Portada.js"></script>
 </body>
 </html>
+
