--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!-- STEPHANIE ORANTES-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +5,7 @@
 html, body, canvas{
 	margin: 0;
 	padding: 0;
-	background: black;
+	background: rgb(211, 83, 83);
 	display:block;
 	color:rgb(169, 152, 119);
 	font-family: Verdana, sans-serif;
@@ -15,7 +14,8 @@ html, body, canvas{
 canvas{
 	-webkit-user-select: none;
     -moz-user-select: none;
-    -khtml-user-select: none
+    -khtml-user-select: none;
+    background: red; 
 }
 a{
 	color: #d96500;
@@ -29,7 +29,6 @@ a{
 <body>
 	<div class="page">
 		<canvas id="floor" width="980" height="661"></canvas>
-	
 	</div>
 <script>/*window.onerror=alert*/</script>
 <script src="INU.js"></script>
